--- a/2-BeautifulSoup/element_sln.ipynb
+++ b/2-BeautifulSoup/element_sln.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2930898f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,21 @@
    "execution_count": null,
    "id": "9b1ad85d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n",
+      "['Pochita']\n",
+      "<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>\n",
+      "http://example.com/Pochita\n"
+     ]
+    }
+   ],
    "source": [
     "# 找到所有的 a 標籤的元素\n",
     "elements = soup.find_all(\"a\")\n",
@@ -50,7 +64,16 @@
     "# 找到第一個 a 標籤而且 href 為 http://example.com/Pochita 的元素\n",
     "element = soup.find('a', href=\"http://example.com/Pochita\")\n",
     "print(elements)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f15302a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 找到所有內容為 Pochita 的元素\n",
     "elements = soup.find_all(string=\"Pochita\")\n",
     "print(elements)\n",
@@ -195,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ispan_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
