--- a/2-BeautifulSoup/element_pra.ipynb
+++ b/2-BeautifulSoup/element_pra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f6e70b12",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.2-py2.py3-none-any.whl.metadata (411 bytes)\n",
-      "Collecting lxml\n",
-      "  Downloading lxml-6.0.2-cp314-cp314-win_amd64.whl.metadata (3.7 kB)\n",
-      "Collecting beautifulsoup4 (from bs4)\n",
-      "  Downloading beautifulsoup4-4.14.2-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4->bs4)\n",
-      "  Downloading soupsieve-2.8-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting typing-extensions>=4.0.0 (from beautifulsoup4->bs4)\n",
-      "  Downloading typing_extensions-4.15.0-py3-none-any.whl.metadata (3.3 kB)\n",
-      "Downloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
-      "Downloading lxml-6.0.2-cp314-cp314-win_amd64.whl (4.1 MB)\n",
-      "   ---------------------------------------- 0.0/4.1 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.3/4.1 MB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 1.8/4.1 MB 6.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 4.1/4.1 MB 11.4 MB/s  0:00:00\n",
-      "Downloading beautifulsoup4-4.14.2-py3-none-any.whl (106 kB)\n",
-      "Downloading soupsieve-2.8-py3-none-any.whl (36 kB)\n",
-      "Downloading typing_extensions-4.15.0-py3-none-any.whl (44 kB)\n",
-      "Installing collected packages: typing-extensions, soupsieve, lxml, beautifulsoup4, bs4\n",
-      "\n",
-      "   ---------------- ----------------------- 2/5 [lxml]\n",
-      "   ---------------- ----------------------- 2/5 [lxml]\n",
-      "   ------------------------ --------------- 3/5 [beautifulsoup4]\n",
-      "   ---------------------------------------- 5/5 [bs4]\n",
-      "\n",
-      "Successfully installed beautifulsoup4-4.14.2 bs4-0.0.2 lxml-6.0.2 soupsieve-2.8 typing-extensions-4.15.0\n",
+      "Requirement already satisfied: bs4 in c:\\users\\elvis\\appdata\\local\\programs\\python\\python314\\lib\\site-packages (0.0.2)\n",
+      "Requirement already satisfied: lxml in c:\\users\\elvis\\appdata\\local\\programs\\python\\python314\\lib\\site-packages (6.0.2)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\elvis\\appdata\\local\\programs\\python\\python314\\lib\\site-packages (from bs4) (4.14.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\elvis\\appdata\\local\\programs\\python\\python314\\lib\\site-packages (from beautifulsoup4->bs4) (2.8)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\elvis\\appdata\\local\\programs\\python\\python314\\lib\\site-packages (from beautifulsoup4->bs4) (4.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -56,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2930898f",
    "metadata": {},
    "outputs": [],
@@ -85,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9b1ad85d",
    "metadata": {},
    "outputs": [
@@ -93,11 +71,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
       "<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>\n",
       "<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>\n",
-      "<a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>\n",
-      "[]\n"
+      "<a href=\"http://example.com/Makima\" id=\"link3\">Makima</a>\n"
      ]
     }
    ],
@@ -119,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n"
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n"
      ]
     }
    ],
@@ -131,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "485661b0",
    "metadata": {},
    "outputs": [
@@ -157,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4628d2b3",
    "metadata": {},
    "outputs": [
@@ -178,7 +155,7 @@
     "# 取得父元素的 href 屬性值 , 因為上面使用find_all 代表抓出來的元素可能有多個波及塔\n",
     "print(elements[0].parent) # 所以打印資料出來時要加上[0] 索引第1個出現的元素\n",
     "# 透過 string 找到的元素，可以使用 parent 屬性找到其父元素\n",
-    "print(elements[0].parent['href'])"
+    "print(elements[0].parent.get('href'))"
    ]
   },
   {
@@ -238,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "3864fd90",
    "metadata": {},
    "outputs": [
@@ -292,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "513f7aea",
    "metadata": {},
    "outputs": [
@@ -300,11 +277,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<a href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
-      "[<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
-      "[<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a class=\"character\" href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>, <a href=\"http://example.com/Makima\" id=\"link3\">Makima</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n",
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>, <a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n",
       "[<a class=\"character\" href=\"http://example.com/Power\" id=\"link2\">Power</a>]\n",
-      "[<a href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>]\n"
+      "[<a class=\"character\" href=\"http://example.com/Pochita\" id=\"link1\">Pochita</a>]\n"
      ]
     }
    ],
