--- a/techers1-Requests/example.ipynb
+++ b/techers1-Requests/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bc69fbb1",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<a href=\"/bbs/Gossiping/M.1763186667.A.4D9.html\">Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!!</a>\n",
-      "標題: Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!! 網址: https://www.ptt.cc/bbs/Gossiping/M.1763186667.A.4D9.html\n",
+      "<a href=\"/bbs/Gossiping/M.1763224017.A.9BD.html\">[問卦] 香腸那麼毒 為什麼不禁止賣?</a>\n",
+      "標題: [問卦] 香腸那麼毒 為什麼不禁止賣? 網址: https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\n",
       "<!DOCTYPE html>\n",
       "<html>\n",
       "\t<head>\n",
@@ -20,24 +20,24 @@
       "\n",
       "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
       "\n",
-      "<title>Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!! - 看板 Gossiping - 批踢踢實業坊</title>\n",
+      "<title>[問卦] 香腸那麼毒 為什麼不禁止賣? - 看板 Gossiping - 批踢踢實業坊</title>\n",
       "<meta name=\"robots\" content=\"all\">\n",
       "<meta name=\"keywords\" content=\"Ptt BBS 批踢踢\">\n",
-      "<meta name=\"description\" content=\"最新爆出的那份錄音檔，整體內容已經不是什麼「個性上有小瑕疵」的程度，而是全面展\n",
-      "現出價值觀與人格底線的問題。\n",
-      "整理重點如下：\n",
-      "1     直接點名怒噴汪小菲與中天蔡董事長\n",
-      "錄音中提到：\n",
+      "<meta name=\"description\" content=\"三不五時 都能看到吃香腸得大腸癌的新聞\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "不是毒害老百姓嗎?\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
       "\">\n",
       "<meta property=\"og:site_name\" content=\"Ptt 批踢踢實業坊\">\n",
-      "<meta property=\"og:title\" content=\"Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!!\">\n",
-      "<meta property=\"og:description\" content=\"最新爆出的那份錄音檔，整體內容已經不是什麼「個性上有小瑕疵」的程度，而是全面展\n",
-      "現出價值觀與人格底線的問題。\n",
-      "整理重點如下：\n",
-      "1     直接點名怒噴汪小菲與中天蔡董事長\n",
-      "錄音中提到：\n",
+      "<meta property=\"og:title\" content=\"[問卦] 香腸那麼毒 為什麼不禁止賣?\">\n",
+      "<meta property=\"og:description\" content=\"三不五時 都能看到吃香腸得大腸癌的新聞\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "不是毒害老百姓嗎?\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
       "\">\n",
-      "<link rel=\"canonical\" href=\"https://www.ptt.cc/bbs/Gossiping/M.1763186667.A.4D9.html\">\n",
+      "<link rel=\"canonical\" href=\"https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\">\n",
       "\n",
       "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-common.css\">\n",
       "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-base.css\" media=\"screen\">\n",
@@ -58,7 +58,7 @@
       "\n",
       "\n",
       "\t</head>\n",
-      "    <body><a href=\"https://www.ptt.cc/cdn-cgi/content?id=JTordPc_si8kuxgpV1dfd3tPoI.1_BnqYaTBAdC8yzI-1763187254.4305878-1.0.1.1-Z0BePA4Q5x_tlyMFx6Ur9qUAJQ04cy8URlg9uaAHfoo\" aria-hidden=\"true\" rel=\"nofollow noopener\" style=\"display: none !important; visibility: hidden !important\"></a>\n",
+      "    <body><a href=\"https://www.ptt.cc/cdn-cgi/content?id=MfHA6TnxaULAu5IxSfTo2HvW3WF0xgNYu8c5TPUMjXk-1763224179.7661414-1.0.1.1-AcM37DfDB2VGGjjoKBxtTFX_jIAKFKq1Xqfw8h3X.hM\" aria-hidden=\"true\" rel=\"nofollow noopener\" style=\"display: none !important; visibility: hidden !important\"></a>\n",
       "\t\t\n",
       "<div id=\"topbar-container\">\n",
       "\t<div id=\"topbar\" class=\"bbs-content\">\n",
@@ -76,46 +76,34 @@
       "\t</div>\n",
       "</div>\n",
       "<div id=\"main-container\">\n",
-      "    <div id=\"main-content\" class=\"bbs-screen bbs-content\"><div class=\"article-metaline\"><span class=\"article-meta-tag\">作者</span><span class=\"article-meta-value\">tn00270144 (乂煞氣a夾小妹乂)</span></div><div class=\"article-metaline-right\"><span class=\"article-meta-tag\">看板</span><span class=\"article-meta-value\">Gossiping</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">標題</span><span class=\"article-meta-value\">Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!!</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">時間</span><span class=\"article-meta-value\">Sat Nov 15 14:04:24 2025</span></div>\n",
-      "最新爆出的那份錄音檔，整體內容已經不是什麼「個性上有小瑕疵」的程度，而是全面展\n",
-      "現出價值觀與人格底線的問題。\n",
+      "    <div id=\"main-content\" class=\"bbs-screen bbs-content\"><div class=\"article-metaline\"><span class=\"article-meta-tag\">作者</span><span class=\"article-meta-value\">OPPAISuki (OPPAISuki)</span></div><div class=\"article-metaline-right\"><span class=\"article-meta-tag\">看板</span><span class=\"article-meta-value\">Gossiping</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">標題</span><span class=\"article-meta-value\">[問卦] 香腸那麼毒 為什麼不禁止賣?</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">時間</span><span class=\"article-meta-value\">Sun Nov 16 00:26:55 2025</span></div>\n",
+      "三不五時 都能看到吃香腸得大腸癌的新聞\n",
       "\n",
       "\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "\n",
+      "不是毒害老百姓嗎?\n",
       "\n",
       "\n",
-      "整理重點如下：\n",
-      "\n",
-      "1     直接點名怒噴汪小菲與中天蔡董事長\n",
-      "\n",
-      "錄音中提到：\n",
-      "\n",
-      "汪小菲：不管跟誰喝酒都能稱兄道弟，但實際沒有任何幫助。\n",
-      "\n",
-      "中天蔡董事長：言語上相當誇張、充滿自我形象塑造，但說得多、做得少。\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
       "\n",
       "\n",
-      "\n",
-      "2     承認政治判斷失準，後悔押錯方向\n",
-      "\n",
-      "錄音中表示，當初全力靠攏 柯文哲與黃國昌 是錯誤判斷，如今發現情勢與結果與預期不\n",
-      "符，因此萌生「未來得前往中國尋求資金」的想法。\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
       "\n",
       "\n",
+      "香腸 火腿 培根 臘肉 臘腸... 紅色的加工肉都應該禁止吧?\n",
       "\n",
-      "3     透露赴中行程是官方觀察性質\n",
-      "\n",
-      "錄音顯示，\n",
-      "前往中國的相關活動並非自主開發，而是由官方安排的行程，性質偏向評估、觀察、看他\n",
-      "的表現，未來是否能在當地成立公司，取決於後續能否通過考量。\n",
+      "保護國人健康啊!\n",
       "\n",
       "\n",
+      "有沒有八卦啊??\n",
       "\n",
       "--\n",
-      "<span class=\"f2\">※ 發信站: 批踢踢實業坊(ptt.cc), 來自: 36.229.103.248 (臺灣)\n",
-      "</span><span class=\"f2\">※ 文章網址: <a href=\"https://www.ptt.cc/bbs/Gossiping/M.1763186667.A.4D9.html\" target=\"_blank\" rel=\"noreferrer noopener nofollow\">https://www.ptt.cc/bbs/Gossiping/M.1763186667.A.4D9.html</a>\n",
+      "<span class=\"f2\">※ 發信站: 批踢踢實業坊(ptt.cc), 來自: 1.160.186.10 (臺灣)\n",
+      "</span><span class=\"f2\">※ 文章網址: <a href=\"https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\" target=\"_blank\" rel=\"noreferrer noopener nofollow\">https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html</a>\n",
       "</span></div>\n",
       "    \n",
-      "    <div id=\"article-polling\" data-pollurl=\"/poll/Gossiping/M.1763186667.A.4D9.html?cacheKey=2431-549800877&amp;offset=926&amp;offset-sig=7b0d86e6040199d1bc4e7283a065384ade9aff27\" data-longpollurl=\"/v1/longpoll?id=fe6de41b643367d26bc91faaefb7a7a5c0e7e406\" data-offset=\"926\"></div>\n",
+      "    <div id=\"article-polling\" data-pollurl=\"/poll/Gossiping/M.1763224017.A.9BD.html?cacheKey=2431-558738140&amp;offset=548&amp;offset-sig=a9b57948a798b269cfa9d4b7e51dfa05a86f9e4a\" data-longpollurl=\"/v1/longpoll?id=b434c124e37c49d096be61af6e67114a66508690\" data-offset=\"548\"></div>\n",
       "    \n",
       "\n",
       "    \n",
@@ -153,7 +141,7 @@
       "<script src=\"//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js\"></script>\n",
       "<script src=\"//images.ptt.cc/bbs/v2.27/bbs.js\"></script>\n",
       "\n",
-      "    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML=\"window.__CF$cv$params={r:'99ec9b742e016af7',t:'MTc2MzE4NzI1NA=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);\";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>\n",
+      "    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML=\"window.__CF$cv$params={r:'99f020f38a34c0cc',t:'MTc2MzIyNDE3OQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);\";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>\n",
       "</html>\n",
       "\n"
      ]
