--- a/2-BeautifulSoup/example.ipynb
+++ b/2-BeautifulSoup/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6aaa6a68",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,140 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "標題:Re: [問卦] 沒想到館長人格有小瑕疵!很扯!!! 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186667.A.4D9.html\n",
-      "標題:[新聞] 蘋果推高價「手機背帶」遭網路嘲諷！一 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186715.A.159.html\n",
-      "標題:[問卦] 光電板毀台環團沒出來，修法環評卻出來了 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186811.A.FD4.html\n",
-      "標題:[問卦] 你們網紅圈真的很亂 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186812.A.F7D.html\n",
-      "標題:[新聞] 美韓貿易、安保達共識 准建核潛艦   網址:https://www.ptt.cc/bbs/Gossiping/M.1763186861.A.108.html\n",
-      "標題:[問卦] Toyz的拾玖茶屋會推新品嗎 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186878.A.EE8.html\n",
-      "標題:[問卦] Wemb斑馬 因該超越MJ了吧? 網址:https://www.ptt.cc/bbs/Gossiping/M.1763186969.A.1EC.html\n",
-      "標題:[新聞] 美軍被國防商當盤子！陸軍部長曝：黑鷹零 網址:https://www.ptt.cc/bbs/Gossiping/M.1763187029.A.690.html\n",
-      "標題:[問卦] 漁港代客料理的廚師 是不是都很厲害？ 網址:https://www.ptt.cc/bbs/Gossiping/M.1763187089.A.263.html\n",
-      "標題:[公告] 八卦板板規(2025.01.21) 網址:https://www.ptt.cc/bbs/Gossiping/M.1737398137.A.644.html\n",
-      "標題:Re: [問卦] 請勿前往光復區，鏟子超人任務艱鉅，病例增。 網址:https://www.ptt.cc/bbs/Gossiping/M.1759065775.A.9B4.html\n",
-      "標題:[公告] 【八卦美學獎】梗圖吐槽，共鳴豹紋笑翻！ 網址:https://www.ptt.cc/bbs/Gossiping/M.1761980569.A.84C.html\n",
-      "標題:[公告] 11/14 八卦踢報十大頭條 11月協尋 置底閒聊 網址:https://www.ptt.cc/bbs/Gossiping/M.1763077421.A.B5B.html\n"
+      "<a href=\"/bbs/Gossiping/M.1763224017.A.9BD.html\">[問卦] 香腸那麼毒 為什麼不禁止賣?</a>\n",
+      "標題:[問卦] 香腸那麼毒 為什麼不禁止賣? 網址:https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\n",
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "\t<head>\n",
+      "\t\t<meta charset=\"utf-8\">\n",
+      "\t\t\n",
+      "\n",
+      "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+      "\n",
+      "<title>[問卦] 香腸那麼毒 為什麼不禁止賣? - 看板 Gossiping - 批踢踢實業坊</title>\n",
+      "<meta name=\"robots\" content=\"all\">\n",
+      "<meta name=\"keywords\" content=\"Ptt BBS 批踢踢\">\n",
+      "<meta name=\"description\" content=\"三不五時 都能看到吃香腸得大腸癌的新聞\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "不是毒害老百姓嗎?\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
+      "\">\n",
+      "<meta property=\"og:site_name\" content=\"Ptt 批踢踢實業坊\">\n",
+      "<meta property=\"og:title\" content=\"[問卦] 香腸那麼毒 為什麼不禁止賣?\">\n",
+      "<meta property=\"og:description\" content=\"三不五時 都能看到吃香腸得大腸癌的新聞\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "不是毒害老百姓嗎?\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
+      "\">\n",
+      "<link rel=\"canonical\" href=\"https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\">\n",
+      "\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-common.css\">\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-base.css\" media=\"screen\">\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-custom.css\">\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/pushstream.css\" media=\"screen\">\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"//images.ptt.cc/bbs/v2.27/bbs-print.css\" media=\"print\">\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "<script>\n",
+      "(() => {\n",
+      "    if (document.cookie.indexOf('over18=1') === -1) {\n",
+      "\tlocation = 'https://www.ptt.cc/ask/over18?from=' + encodeURIComponent(location.pathname);\n",
+      "    }\n",
+      "})();\n",
+      "</script>\n",
+      "\n",
+      "\n",
+      "\t</head>\n",
+      "    <body><a href=\"https://www.ptt.cc/cdn-cgi/content?id=tZbWcylrdagGO4S3TF_ltm9OJZ8DzmMDzpnNdslkLN8-1763224191.4829233-1.0.1.1-2eOD2bWY8LJU2pSM0rI845LT1bwtAdwqncnvnbVnmzY\" aria-hidden=\"true\" rel=\"nofollow noopener\" style=\"display: none !important; visibility: hidden !important\"></a>\n",
+      "\t\t\n",
+      "<div id=\"topbar-container\">\n",
+      "\t<div id=\"topbar\" class=\"bbs-content\">\n",
+      "\t\t<a id=\"logo\" href=\"/bbs/\">批踢踢實業坊</a>\n",
+      "\t\t<span>&rsaquo;</span>\n",
+      "\t\t<a class=\"board\" href=\"/bbs/Gossiping/index.html\"><span class=\"board-label\">看板 </span>Gossiping</a>\n",
+      "\t\t<a class=\"right small\" href=\"/about.html\">關於我們</a>\n",
+      "\t\t<a class=\"right small\" href=\"/contact.html\">聯絡資訊</a>\n",
+      "\t</div>\n",
+      "</div>\n",
+      "<div id=\"navigation-container\">\n",
+      "\t<div id=\"navigation\" class=\"bbs-content\">\n",
+      "\t\t<a class=\"board\" href=\"/bbs/Gossiping/index.html\">返回看板</a>\n",
+      "\t\t<div class=\"bar\"></div>\n",
+      "\t</div>\n",
+      "</div>\n",
+      "<div id=\"main-container\">\n",
+      "    <div id=\"main-content\" class=\"bbs-screen bbs-content\"><div class=\"article-metaline\"><span class=\"article-meta-tag\">作者</span><span class=\"article-meta-value\">OPPAISuki (OPPAISuki)</span></div><div class=\"article-metaline-right\"><span class=\"article-meta-tag\">看板</span><span class=\"article-meta-value\">Gossiping</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">標題</span><span class=\"article-meta-value\">[問卦] 香腸那麼毒 為什麼不禁止賣?</span></div><div class=\"article-metaline\"><span class=\"article-meta-tag\">時間</span><span class=\"article-meta-value\">Sun Nov 16 00:26:55 2025</span></div>\n",
+      "三不五時 都能看到吃香腸得大腸癌的新聞\n",
+      "\n",
+      "\n",
+      "香腸 那麼可怕 那麼毒 為什麼還能繼續賣啊?\n",
+      "\n",
+      "不是毒害老百姓嗎?\n",
+      "\n",
+      "\n",
+      "香腸 這種 加工肉品 加了亞硝酸鹽 讓肉類保持鮮紅色 防腐 增添風味\n",
+      "\n",
+      "\n",
+      "但亞硝酸鹽 跟胺類食物 結合 會產生&#34;致癌物&#34;\n",
+      "\n",
+      "\n",
+      "香腸 火腿 培根 臘肉 臘腸... 紅色的加工肉都應該禁止吧?\n",
+      "\n",
+      "保護國人健康啊!\n",
+      "\n",
+      "\n",
+      "有沒有八卦啊??\n",
+      "\n",
+      "--\n",
+      "<span class=\"f2\">※ 發信站: 批踢踢實業坊(ptt.cc), 來自: 1.160.186.10 (臺灣)\n",
+      "</span><span class=\"f2\">※ 文章網址: <a href=\"https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html\" target=\"_blank\" rel=\"noreferrer noopener nofollow\">https://www.ptt.cc/bbs/Gossiping/M.1763224017.A.9BD.html</a>\n",
+      "</span></div>\n",
+      "    \n",
+      "    <div id=\"article-polling\" data-pollurl=\"/poll/Gossiping/M.1763224017.A.9BD.html?cacheKey=2431-558738140&amp;offset=548&amp;offset-sig=a9b57948a798b269cfa9d4b7e51dfa05a86f9e4a\" data-longpollurl=\"/v1/longpoll?id=b434c124e37c49d096be61af6e67114a66508690\" data-offset=\"548\"></div>\n",
+      "    \n",
+      "\n",
+      "    \n",
+      "<div class=\"bbs-screen bbs-footer-message\">本網站已依台灣網站內容分級規定處理。此區域為限制級，未滿十八歲者不得瀏覽。</div>\n",
+      "\n",
+      "</div>\n",
+      "\n",
+      "\t\t\n",
+      "\n",
+      "\n",
+      "\n",
+      "<script async src=\"https://www.googletagmanager.com/gtag/js?id=G-DZ6Y3BY9GW\"></script>\n",
+      "<script>\n",
+      "      window.dataLayer = window.dataLayer || [];\n",
+      "      function gtag(){dataLayer.push(arguments);}\n",
+      "      gtag('js', new Date());\n",
+      "\n",
+      "      gtag('config', 'G-DZ6Y3BY9GW');\n",
+      "</script>\n",
+      "<script>\n",
+      "  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){\n",
+      "  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),\n",
+      "  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)\n",
+      "  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');\n",
+      "\n",
+      "  ga('create', 'UA-32365737-1', {\n",
+      "    cookieDomain: 'ptt.cc',\n",
+      "    legacyCookieDomain: 'ptt.cc'\n",
+      "  });\n",
+      "  ga('send', 'pageview');\n",
+      "</script>\n",
+      "\n",
+      "\n",
+      "\t\t\n",
+      "<script src=\"//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js\"></script>\n",
+      "<script src=\"//images.ptt.cc/bbs/v2.27/bbs.js\"></script>\n",
+      "\n",
+      "    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML=\"window.__CF$cv$params={r:'99f0213ccaba67ca',t:'MTc2MzIyNDE5MQ=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);\";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>\n",
+      "</html>\n",
+      "\n"
      ]
     }
    ],
@@ -42,10 +163,14 @@
     "\n",
     "title_elements = soup.select(\".r-ent .title a\") #空一格往內找一層 (CSS) \n",
     "\n",
-    "for ele in title_elements:\n",
+    "print(title_elements[0])\n",
+    "\n",
+    "for ele in title_elements: \n",
     "    print(f'標題:{ele.get_text()} 網址:{prefix + ele['href']}')\n",
     "\n",
-    "    print_response = requests.get(prefix + ele['href'])\n",
+    "    ppt_response = requests.get(prefix + ele['href'])\n",
+    "    print(ppt_response.text)\n",
+    "    break\n",
     "    \n",
     "\n"
    ]
